--- a/eCommerce/templates/product/cart.html
+++ b/eCommerce/templates/product/cart.html
@@ -67,13 +67,10 @@
         <div class="cart-bottom">
           <div class="box-footer">
             <div class="pull-left">
-              <a class="btn btn-default" href="/product-index">
+              <a id="continue-shopping-btn" class="btn btn-default">
                 <i class="fa fa-arrow-left"></i> &nbsp;
                 Continue shopping
               </a>
-            </div>
-            <div class="pull-right">
-              <button class="btn btn-default" type="submit"><i class="fa fa-undo"></i> &nbsp; Update cart</button>
             </div>
           </div>
         </div>
